# quiz-client

./: README.md  pyproject.toml  tox.ini
src/quiz_client/: __main__.py
