[project]
name = "quiz-client"
version = "0.1.0"
description = "Quiz client"
authors = [
    {name = "Martin Zeleny", email = "martin.zeleny@volny.cz"},
]
dependencies = [
    "asyncio>=3.4.3",
    "websockets>=10.0",
    "aioconsole>=0.6.2",
]
requires-python = ">=3.11"
readme = "README.md"
license = {text = "MIT"}

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[project.scripts]
quiz-client = "quiz_client.__main__:main"
